syntax = "proto3";

package robot;

import "robot/move.proto";
import "robot/stop.proto";

service RobotControl {
  rpc Move(MoveRequest) returns (MoveResponse);
  rpc Stop(StopRequest) returns (StopResponse);
}