syntax = "proto3";

package robot;

message StopRequest {}

message StopResponse {
  string message = 1;
}